--- a/Form.html
+++ b/Form.html
@@ -25,9 +25,9 @@
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js"></script>
     <script src="https://superal.github.io/canvas2image/canvas2image.js"></script>
     <link rel="stylesheet" href="css/form.css">
-    <link rel="stylesheet" href="templates/template1.css">
-    <link rel="stylesheet" href="templates/template2.css">
-    <link rel="stylesheet" href="templates/template3.css">
+    <link rel="stylesheet" type="text/css" href="templates/template1.css">
+    <link rel="stylesheet" type="text/css" href="templates/template2.css">
+    <link rel="stylesheet" type="text/css" href="templates/template3.css">
     <link rel="stylesheet" type="text/css" href="css/form.css" media="print">
 
 </head>
